--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open</string>
     <string name="drawer_close">Close</string>
+    <string name="dateerror">Enter a valid date</string>
     <string-array name="planets_array">
         <item>Trigo</item>
         <item>Maiz</item>
